--- a/templates/index.html
+++ b/templates/index.html
@@ -30,6 +30,7 @@
       <li><a href="/update-redesign/index">Adding new buttons to update screens</a></li>
       <li><a href="/tce-2523/index">Bottom banner - supplier Information</a></li>
       <li><a href="/new-search/index">Updated Search Page</a></li>
+       <li><a href="/undo-changes/index">New Audit Page - Undo changes</a></li>
     </ul>
   </div>
 </div>
