--- a/templates/new-search/vmp-results.html
+++ b/templates/new-search/vmp-results.html
@@ -59,18 +59,103 @@
                     </div>
 
 
+        <div class="nhsuk-grid-column-full">
+          <details class="nhsuk-details">
+            <summary class="nhsuk-details__summary">
+              <span class="nhsuk-details__summary-text">Apply filters to search</span>
+            </summary>
+            <div class="nhsuk-details__text">
+
+              <div class="nhsuk-form-group">
+                <fieldset class="nhsuk-fieldset">
+                  <legend class="nhsuk-fieldset__legend">Filter by</legend>
+                  <div class="nhsuk-checkboxes">
+
+                    <div class="nhsuk-grid-column-one-quarter nhsuk-u-padding-top-2">
+                      <div class="nhsuk-checkboxes__item">
+                        <input type="hidden" name="_showPCDD" value="on"><input class="nhsuk-checkboxes__input"
+                          id="checkbox-show-pcdd-items" type="checkbox" checked="checked" name="showPCDD" value="true">
+                        <label class="nhsuk-label nhsuk-checkboxes__label" for="checkbox-show-pcdd-items">
+                          PCDD
+                        </label>
+                      </div>
+                      <div class="nhsuk-checkboxes__item">
+                        <input type="hidden" name="_showSCDD" value="on"><input class="nhsuk-checkboxes__input"
+                          id="checkbox-show-scdd-items" type="checkbox" checked="checked" name="showSCDD" value="true">
+                        <label class="nhsuk-label nhsuk-checkboxes__label" for="checkbox-show-scdd-items">
+                          SCDD
+                        </label>
+                      </div>
+                    </div>
+
+                    <div class="nhsuk-grid-column-one-quarter nhsuk-u-padding-top-2">
+                      <div class="nhsuk-checkboxes__item">
+                        <input type="hidden" name="_showValidItems" value="on"><input class="nhsuk-checkboxes__input"
+                          id="checkbox-show-valid-items" type="checkbox" checked="checked" name="showValidItems"
+                          value="true">
+                        <label class="nhsuk-label nhsuk-checkboxes__label" for="checkbox-show-valid-items">
+                          Valid
+                        </label>
+                      </div>
+
+                      <div class="nhsuk-checkboxes__item">
+                        <input type="hidden" name="_showInvalidItems" value="on"><input class="nhsuk-checkboxes__input"
+                          id="checkbox-show-invalid-items" type="checkbox" checked="checked" name="showInvalidItems"
+                          value="true">
+                        <label class="nhsuk-label nhsuk-checkboxes__label" for="checkbox-show-invalid-items">
+                          Invalid
+                        </label>
+                      </div>
+                    </div>
+
+                    <div class="nhsuk-grid-column-one-quarter nhsuk-u-padding-top-2">
+                      <div class="nhsuk-checkboxes__item">
+                        <input type="hidden" name="_showAvailable" value="on"><input class="nhsuk-checkboxes__input"
+                          id="checkbox-show-avail-items" type="checkbox" checked="checked" name="showAvailable"
+                          value="true">
+                        <label class="nhsuk-label nhsuk-checkboxes__label" for="checkbox-show-avail-items">
+                          Available
+                        </label>
+                      </div>
+
+
+                      <div class="nhsuk-checkboxes__item">
+                        <input type="hidden" name="_showUnavailable" value="on"><input class="nhsuk-checkboxes__input"
+                          id="checkbox-show-unavail-items" type="checkbox" checked="checked" name="showUnavailable"
+                          value="true">
+                        <label class="nhsuk-label nhsuk-checkboxes__label" for="checkbox-show-unavail-items">
+                          Unavailable
+                        </label>
+                      </div>
+                    </div>
+
+                    <div class="nhsuk-grid-column-one-quarter nhsuk-u-padding-top-2">
+                      <div class="nhsuk-checkboxes__item">
+                        <input type="hidden" name="_matchTermsExact" value="on"><input class="nhsuk-checkboxes__input"
+                          id="checkbox-match-name-exact" type="checkbox" checked="checked" name="matchTermsExact"
+                          value="true">
+                        <label class="nhsuk-label nhsuk-checkboxes__label" for="checkbox-match-name-exact">
+                          Match terms
+                        </label>
+                      </div>
+
+                    </div>
+
+                  </div>
+                </fieldset>
+              </div>
+            </div>
+          </details>
+        </div>
+
+
                     <input type="hidden" value="100" id="size" name="size">
-                    <div class="nhsuk-grid-column-one-third nhsuk-button-float-right" id="button-search">
+                    <div class="nhsuk-grid-column-one-third nhsuk-u-float-right" id="button-search">
 
-                        <a class="nhsuk-button" data-module="nhsuk-button" href="/new-search/index" draggable="false"
-                            role="button" data-nhsuk-button-init="">
-                            New search
-                        </a>
-
-                        <button class="nhsuk-button nhsuk-button--secondary" id="reset-button" name="reset"
-                            type="submit">Reset
+          <button type="button" class="nhsuk-button nhsuk-u-float-right" id="search-button">
+                            Search
                         </button>
-
+                     
 
 
                     </div>
@@ -114,8 +199,7 @@
                         <div class="nhsuk-form-group">
                             <fieldset class="nhsuk-fieldset">
                                 <div class="nhsuk-hint" id="contact-hint">
-                                    Add or remove attribute columns by ticking or unticking them, and pressing
-                                    the "Update table" button
+                                    Add or remove attribute columns by ticking or unticking them
                                 </div>
                                 <div class="nhsuk-checkboxes">
 
@@ -241,6 +325,9 @@
                 </details>
             </div>
 
+                        <button class="nhsuk-button nhsuk-button--secondary nhsuk-u-float-right" id="reset-button" type="button">
+                Reset table
+            </button>
             <table role="table-responsive" class="nhsuk-table-responsive " data-module="moj-sortable-table">
                 <caption class="nhsuk-table__caption nhsuk-u-visually-hidden">Search Results</caption>
                 <thead role="rowgroup" class="nhsuk-table__head">
@@ -885,5 +972,67 @@
 </script>
 
 
+<script>
+document.addEventListener('DOMContentLoaded', function () {
+  const searchTypeSelect = document.getElementById('search-type');
+  const supplierInputRow = document.getElementById('row-supplier-input');
 
+  function toggleSupplierInput() {
+    if (searchTypeSelect.value === 'AMP') {
+      supplierInputRow.style.display = 'block';
+    } else {
+      supplierInputRow.style.display = 'none';
+    }
+  }
+
+  // Run once on page load in case AMP is pre-selected
+  toggleSupplierInput();
+
+  // Listen for changes
+  searchTypeSelect.addEventListener('change', toggleSupplierInput);
+});
+</script>
+
+
+<script>
+  document.getElementById("search-button").addEventListener("click", function () {
+    const searchType = document.getElementById("search-type").value;
+    const searchTerm = document.getElementById("search-term").value;
+
+    // Construct URL based on selected search type
+    let basePath = "/new-search/index"; // default
+    switch (searchType) {
+      case "VMP":
+        basePath = "/new-search/vmp-results";
+        break;
+      case "AMP":
+        basePath = "/new-search/amp-results";
+        break;
+      case "Supplier":
+        basePath = "/new-search/supplier-results";
+        break;
+      case "VTM":
+        basePath = "/new-search/vtm-results";
+        break;
+      case "Ingredient":
+        basePath = "/new-search/ingredient-results";
+        break;
+    }
+
+ const params = new URLSearchParams({
+      searchTerm: searchTerm,
+      searchType: searchType
+    });
+
+    // Redirect
+    window.location.href = `${basePath}?${params.toString()}`;
+  });
+</script>
+
+<script>
+document.getElementById('reset-button').addEventListener('click', function () {
+  // Simply reloads the page, preserving query parameters
+  window.location.reload();
+});
+</script>
 {% endblock %}
