--- a/templates/undo-changes/amp-review-undo.html
+++ b/templates/undo-changes/amp-review-undo.html
@@ -44,17 +44,14 @@
           <section class="nhsuk-u-padding-bottom-4" id="updateAttribute-summary-section">
 
 
-            <h2 class="nhsuk-heading-m" id="update-attributes-summary-table-heading">Changes made: 04-08-2025
-              , 03:24 PM by JLOCK</h2>
+            <h2 class="nhsuk-heading-m" id="update-attributes-summary-table-heading">Changes made: 28-07-2025
+              , 10:16 AM by HEKIR [undo]</h2>
 
             <div class="nhsuk-table-responsive">
               <table class="nhsuk-table" role="table" id="update-attributes-summary-table">
                 <thead class="nhsuk-table__head" id="attributes-table-head" role="rowgroup">
                   <tr role="row" id="updateAttribute-table-summary-table-head-row">
-                    <th class="nhsuk-table__header-identifier columnheader-sticky"
-                      id="updateAttribute-table--tag-header" role="columnheader" scope="col" style="width: 10px;">
-                      <span class="nhsuk-u-visually-hidden">Select</span>
-                    </th>
+
                     <th class="nhsuk-table__header-identifier columnheader-sticky"
                       id="updateAttribute-table--tag-header" role="columnheader" scope="col" style="width: 10px;">
                       <span class="nhsuk-u-visually-hidden">Indicator</span>
@@ -96,18 +93,7 @@
                   <tr class="nhsuk-table__row temporal-current temporal-current" role="row"
                     id="updateAttribute-table-summary-body-row-0">
 
-                    <td role="cell" class="nhsuk-table__cell" rowspan="2" style="vertical-align: middle;">
-                      <span class="nhsuk-table-responsive__heading">Select</span>
-                      <div class="nhsuk-checkboxes">
-                        <div class="nhsuk-checkboxes__item">
-                          <input class="nhsuk-checkboxes__input" id="example-2" name="example" type="checkbox"
-                            value="phone">
-                          <label class="nhsuk-label nhsuk-checkboxes__label" for="example-2">
 
-                          </label>
-                        </div>
-                      </div>
-                    </td>
 
 
 
@@ -142,7 +128,7 @@
                     <td class="nhsuk-table__cell nhsuk-u--table-date-width"
                       id="updateAttribute-table-summary-body-cell-attribute-start-date-0">
                       <span class="nhsuk-table-responsive__heading">Start date</span>
-                      <span id="updateAttribute-table--updateAttribute-start-date-0">04-08-2025</span>
+                      <span id="updateAttribute-table--updateAttribute-start-date-0">04-02-2020</span>
                     </td>
 
                     <td class="nhsuk-table__cell nhsuk-u--table-date-width"
@@ -152,67 +138,12 @@
                     </td>
                   </tr>
 
-                  <tr class="nhsuk-table__row temporal-current temporal-historic" role="row"
-                    id="updateAttribute-table-summary-body-row-1">
 
-                    <td class="nhsuk-table__cell-historic" role="cell"
-                      id="updateAttribute-table-summary-body-indicator-cell-1">
-                      <span class="nhsuk-table-responsive__heading">Indicator </span>
-                      <span id="updateAttribute-table--availability-restrictions-updateAttribute-tag-value-current-1">
-
-
-
-                     <span class="nhsuk-u-visually-hidden nhsuk-table__cell-historic">Previous</span>
-                        <strong class="nhsuk-tag nhsuk-tag--aqua-green"><abbr title="Previous">Previous</abbr>
-                        </strong>
-
-
-
-
-
-
-                      </span>
-                    </td>
-
-                    <td class="nhsuk-table__cell" role="cell"
-                      id="updateAttribute-table-summary-body-cell-attribute-name-1">
-                      <span class="nhsuk-table-responsive__heading">Attribute name </span>
-                      <span id="updateAttribute-table--updateAttribute-description-1">Availability Restrictions</span>
-                    </td>
-                    <td class="nhsuk-table__cell" role="cell"
-                      id="updateAttribute-table-summary-body-cell-attribute-value-1">
-                      <span class="nhsuk-table-responsive__heading">Value </span>
-                      <span id="updateAttribute-table--updateAttribute-value-1">Not available</span>
-                    </td>
-
-                    <td class="nhsuk-table__cell nhsuk-u--table-date-width"
-                      id="updateAttribute-table-summary-body-cell-attribute-start-date-1">
-                      <span class="nhsuk-table-responsive__heading">Start date</span>
-                      <span id="updateAttribute-table--updateAttribute-start-date-1">04-02-2020</span>
-                    </td>
-
-                    <td class="nhsuk-table__cell nhsuk-u--table-date-width"
-                      id="updateAttribute-table-summary-body-cell-attribute-end-date-1">
-                      <span class="nhsuk-table-responsive__heading">End date</span>
-                      <span id="updateAttribute-table--updateAttribute-end-date-1">03-08-2025</span>
-                    </td>
-                  </tr>
 
                   <tr class="nhsuk-table__row temporal-current temporal-current" role="row"
                     id="updateAttribute-table-summary-body-row-2">
 
-                    <td role="cell" class="nhsuk-table__cell" rowspan="2" style="vertical-align: middle;">
-                      <span class="nhsuk-table-responsive__heading">Select</span>
-                      <div class="nhsuk-checkboxes">
-                        <div class="nhsuk-checkboxes__item">
-                          <input class="nhsuk-checkboxes__input" id="example-2" name="example" type="checkbox"
-                            value="phone">
-                          <label class="nhsuk-label nhsuk-checkboxes__label" for="example-2">
 
-                          </label>
-                        </div>
-                      </div>
-                    </td>
 
                     <td class="nhsuk-table__cell-historic" role="cell"
                       id="updateAttribute-table-summary-body-indicator-cell-2">
@@ -245,7 +176,7 @@
                     <td class="nhsuk-table__cell nhsuk-u--table-date-width"
                       id="updateAttribute-table-summary-body-cell-attribute-start-date-2">
                       <span class="nhsuk-table-responsive__heading">Start date</span>
-                      <span id="updateAttribute-table--updateAttribute-start-date-2">04-08-2025</span>
+                      <span id="updateAttribute-table--updateAttribute-start-date-2">01-01-1948</span>
                     </td>
 
                     <td class="nhsuk-table__cell nhsuk-u--table-date-width"
@@ -255,67 +186,11 @@
                     </td>
                   </tr>
 
-                  <tr class="nhsuk-table__row temporal-current temporal-historic" role="row"
-                    id="updateAttribute-table-summary-body-row-3">
-
-                    <td class="nhsuk-table__cell-historic" role="cell"
-                      id="updateAttribute-table-summary-body-indicator-cell-3">
-                      <span class="nhsuk-table-responsive__heading">Indicator </span>
-                      <span id="updateAttribute-table--licensing-authority-updateAttribute-tag-value-current-3">
-
-
-
-                        <span class="nhsuk-u-visually-hidden nhsuk-table__cell-historic">Previous</span>
-                        <strong class="nhsuk-tag nhsuk-tag--aqua-green"><abbr title="Previous">Previous</abbr>
-                        </strong>
-
-
-
-
-
-
-                      </span>
-                    </td>
-
-                    <td class="nhsuk-table__cell" role="cell"
-                      id="updateAttribute-table-summary-body-cell-attribute-name-3">
-                      <span class="nhsuk-table-responsive__heading">Attribute name </span>
-                      <span id="updateAttribute-table--updateAttribute-description-3">Licensing Authority</span>
-                    </td>
-                    <td class="nhsuk-table__cell" role="cell"
-                      id="updateAttribute-table-summary-body-cell-attribute-value-3">
-                      <span class="nhsuk-table-responsive__heading">Value </span>
-                      <span id="updateAttribute-table--updateAttribute-value-3">Medicines - MHRA/EMA</span>
-                    </td>
-
-                    <td class="nhsuk-table__cell nhsuk-u--table-date-width"
-                      id="updateAttribute-table-summary-body-cell-attribute-start-date-3">
-                      <span class="nhsuk-table-responsive__heading">Start date</span>
-                      <span id="updateAttribute-table--updateAttribute-start-date-3">01-01-1948</span>
-                    </td>
-
-                    <td class="nhsuk-table__cell nhsuk-u--table-date-width"
-                      id="updateAttribute-table-summary-body-cell-attribute-end-date-3">
-                      <span class="nhsuk-table-responsive__heading">End date</span>
-                      <span id="updateAttribute-table--updateAttribute-end-date-3">03-08-2025</span>
-                    </td>
-                  </tr>
 
                   <tr class="nhsuk-table__row temporal-current temporal-current" role="row"
                     id="updateAttribute-table-summary-body-row-4">
 
-                    <td role="cell" class="nhsuk-table__cell" rowspan="2" style="vertical-align: middle;">
-                      <span class="nhsuk-table-responsive__heading">Select</span>
-                      <div class="nhsuk-checkboxes">
-                        <div class="nhsuk-checkboxes__item">
-                          <input class="nhsuk-checkboxes__input" id="example-2" name="example" type="checkbox"
-                            value="phone">
-                          <label class="nhsuk-label nhsuk-checkboxes__label" for="example-2">
 
-                          </label>
-                        </div>
-                      </div>
-                    </td>
 
                     <td class="nhsuk-table__cell-historic" role="cell"
                       id="updateAttribute-table-summary-body-indicator-cell-4">
@@ -344,64 +219,19 @@
                     <td class="nhsuk-table__cell" role="cell"
                       id="updateAttribute-table-summary-body-cell-attribute-value-4">
                       <span class="nhsuk-table-responsive__heading">Value </span>
-                      <span id="updateAttribute-table--updateAttribute-value-4">Reintroduced</span>
+                      <span id="updateAttribute-table--updateAttribute-value-4"> </span>
                     </td>
 
                     <td class="nhsuk-table__cell nhsuk-u--table-date-width"
                       id="updateAttribute-table-summary-body-cell-attribute-start-date-4">
                       <span class="nhsuk-table-responsive__heading">Start date</span>
-                      <span id="updateAttribute-table--updateAttribute-start-date-4">04-08-2025</span>
+                      <span id="updateAttribute-table--updateAttribute-start-date-4"> </span>
                     </td>
 
                     <td class="nhsuk-table__cell nhsuk-u--table-date-width"
                       id="updateAttribute-table-summary-body-cell-attribute-end-date-4">
                       <span class="nhsuk-table-responsive__heading">End date</span>
-                      <span id="updateAttribute-table--updateAttribute-end-date-4">01-02-3456</span>
-                    </td>
-                  </tr>
-                                    <tr class="nhsuk-table__row temporal-current temporal-historic" role="row"
-                    id="updateAttribute-table-summary-body-row-3">
-
-                    <td class="nhsuk-table__cell-historic" role="cell"
-                      id="updateAttribute-table-summary-body-indicator-cell-3">
-                      <span class="nhsuk-table-responsive__heading">Indicator </span>
-                      <span id="updateAttribute-table--licensing-authority-updateAttribute-tag-value-current-3">
-
-
-
-                        <span class="nhsuk-u-visually-hidden nhsuk-table__cell-historic">Previous</span>
-                        <strong class="nhsuk-tag nhsuk-tag--aqua-green"><abbr title="Previous">Previous</abbr>
-                        </strong>
-
-
-
-
-
-
-                      </span>
-                    </td>
-
-                    <td class="nhsuk-table__cell" role="cell"
-                      id="updateAttribute-table-summary-body-cell-attribute-name-3">
-                      <span class="nhsuk-table-responsive__heading">Attribute name </span>
-                      <span id="updateAttribute-table--updateAttribute-description-3">Licensing Authority Change Reason</span>
-                    </td>
-                    <td class="nhsuk-table__cell" role="cell"
-                      id="updateAttribute-table-summary-body-cell-attribute-value-3">
-                      <span class="nhsuk-table-responsive__heading">Value </span>
-                      <span id="updateAttribute-table--updateAttribute-value-3"> </span>
-                    </td>
-
-                    <td class="nhsuk-table__cell nhsuk-u--table-date-width"
-                      id="updateAttribute-table-summary-body-cell-attribute-start-date-3">
-                      <span class="nhsuk-table-responsive__heading">Start date</span>
-                      <span id="updateAttribute-table--updateAttribute-start-date-3"> </span>
-                    </td>
-
-                    <td class="nhsuk-table__cell nhsuk-u--table-date-width"
-                      id="updateAttribute-table-summary-body-cell-attribute-end-date-3">
-                      <span class="nhsuk-table-responsive__heading">End date</span>
-                      <span id="updateAttribute-table--updateAttribute-end-date-3"> </span>
+                      <span id="updateAttribute-table--updateAttribute-end-date-4"> </span>
                     </td>
                   </tr>
                 </tbody>
@@ -411,12 +241,12 @@
           </section>
         </div>
       </div>
-
+<!-- 
       <a class="nhsuk-button nhsuk-u-margin-right-2" id="submit" href="/undo-changes/amp-warning">Undo selected
         changes</button>
 
       <a class="nhsuk-button nhsuk-button--secondary-solid nhsuk-u-margin-left-2" href="/undo-changes/amp" id="cancel"  >Cancel and go
-        back</a>
+        back</a> -->
 
     </form>
   </div>
