--- a/templates/undo-changes/base.html
+++ b/templates/undo-changes/base.html
@@ -162,6 +162,13 @@
         </div>
       </div>
     </div>
+
+        <script src="/js/nhsuk.min.js"></script>
+  <script src="/js/gov.js"></script>
+  <script>
+    window.GOVUKFrontend.initAll();
+  </script>
+  {% block scripts %}{% endblock %}
   </footer>
 
 </body>
