--- a/templates/undo-changes/vmp-warning.html
+++ b/templates/undo-changes/vmp-warning.html
@@ -4,7 +4,7 @@
 <div class="nhsuk-width-container-fluid">
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-full">
-      <div class="nhsuk-back-link"> <a class="nhsuk-back-link__link" href="/undo-changes/amp">
+      <div class="nhsuk-back-link"> <a class="nhsuk-back-link__link" href="/undo-changes/amp-review">
           <svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
             aria-hidden="true" height="24" width="24">
             <path
@@ -25,7 +25,17 @@
     <div class="nhsuk-grid-row">
       <div class="nhsuk-grid-column-full">
 
-        <span class="nhsuk-caption-l" id="update-attributes-sub-heading">Change summary</span>
+   <div class="nhsuk-warning-callout">
+          <h3 class="nhsuk-warning-callout__label"> <span role="text">
+              <span class="nhsuk-u-visually-hidden">Important: </span>
+              You are about to undo changes
+            </span> </h3>
+          <p>Undoing these changes will restore the attribute values to the previous state. Once you undo these changes, you
+            cannot redo them. </p>
+        </div>
+    
+
+        <span class="nhsuk-caption-l" id="update-attributes-sub-heading">Undo changes</span>
         <span class="nhsuk-u-visually-hidden"> - </span>
         <h1 class="nhsuk-heading-xl" id="update-attributes-heading">Atenolol 100mg tablets (Actavis UK Ltd)</h1>
 
@@ -44,21 +54,21 @@
           <section class="nhsuk-u-padding-bottom-4" id="updateAttribute-summary-section">
 
 
-            <h2 class="nhsuk-heading-m" id="update-attributes-summary-table-heading">Changes made: 04-08-2025
-              , 03:24 PM by JLOCK</h2>
+            <!-- <h2 class="nhsuk-heading-m" id="update-attributes-summary-table-heading">Changes made: 31-08-2025
+              , 03:24 PM by JLOCK</h2> -->
 
             <div class="nhsuk-table-responsive">
               <table class="nhsuk-table" role="table" id="update-attributes-summary-table">
                 <thead class="nhsuk-table__head" id="attributes-table-head" role="rowgroup">
                   <tr role="row" id="updateAttribute-table-summary-table-head-row">
-                    <th class="nhsuk-table__header-identifier columnheader-sticky"
+                    <!-- <th class="nhsuk-table__header-identifier columnheader-sticky"
                       id="updateAttribute-table--tag-header" role="columnheader" scope="col" style="width: 10px;">
                       <span class="nhsuk-u-visually-hidden">Select</span>
-                    </th>
-                    <th class="nhsuk-table__header-identifier columnheader-sticky"
+                    </th> -->
+                    <!-- <th class="nhsuk-table__header-identifier columnheader-sticky"
                       id="updateAttribute-table--tag-header" role="columnheader" scope="col" style="width: 10px;">
                       <span class="nhsuk-u-visually-hidden">Indicator</span>
-                    </th>
+                    </th> -->
 
                     <th class="columnheader-sticky" id="updateAttribute-table-summary--name-header" role="columnheader"
                       scope="col">
@@ -93,77 +103,20 @@
                 </thead>
                 <tbody class="nhsuk-table__body">
 
-                  <tr class="nhsuk-table__row temporal-current temporal-current" role="row"
-                    id="updateAttribute-table-summary-body-row-0">
-
-                    <td role="cell" class="nhsuk-table__cell" rowspan="2" style="vertical-align: middle;">
-                      <span class="nhsuk-table-responsive__heading">Select</span>
-                      <div class="nhsuk-checkboxes">
-                        <div class="nhsuk-checkboxes__item">
-                          <input class="nhsuk-checkboxes__input" id="example-2" name="example" type="checkbox"
-                            value="phone">
-                          <label class="nhsuk-label nhsuk-checkboxes__label" for="example-2">
-
-                          </label>
-                        </div>
-                      </div>
-                    </td>
 
 
-
-                    <td class="nhsuk-table__cell-historic" role="cell"
-                      id="updateAttribute-table-summary-body-indicator-cell-0">
-                      <span class="nhsuk-table-responsive__heading">Indicator </span>
-                      <span id="updateAttribute-table--availability-restrictions-updateAttribute-tag-value-current-0">
-
-
-
-
-
-                        <span class="nhsuk-u-visually-hidden nhsuk-table__cell-historic">Current</span>
-
-
-
-
-                      </span>
-                    </td>
-
-                    <td class="nhsuk-table__cell" role="cell"
-                      id="updateAttribute-table-summary-body-cell-attribute-name-0">
-                      <span class="nhsuk-table-responsive__heading">Attribute name </span>
-                      <span id="updateAttribute-table--updateAttribute-description-0">Availability Restrictions</span>
-                    </td>
-                    <td class="nhsuk-table__cell" role="cell"
-                      id="updateAttribute-table-summary-body-cell-attribute-value-0">
-                      <span class="nhsuk-table-responsive__heading">Value </span>
-                      <span id="updateAttribute-table--updateAttribute-value-0">None</span>
-                    </td>
-
-                    <td class="nhsuk-table__cell nhsuk-u--table-date-width"
-                      id="updateAttribute-table-summary-body-cell-attribute-start-date-0">
-                      <span class="nhsuk-table-responsive__heading">Start date</span>
-                      <span id="updateAttribute-table--updateAttribute-start-date-0">04-08-2025</span>
-                    </td>
-
-                    <td class="nhsuk-table__cell nhsuk-u--table-date-width"
-                      id="updateAttribute-table-summary-body-cell-attribute-end-date-0">
-                      <span class="nhsuk-table-responsive__heading">End date</span>
-                      <span id="updateAttribute-table--updateAttribute-end-date-0">01-02-3456</span>
-                    </td>
-                  </tr>
-
-                  <tr class="nhsuk-table__row temporal-current temporal-historic" role="row"
+                  <tr class="nhsuk-table__row " role="row"
                     id="updateAttribute-table-summary-body-row-1">
 
-                    <td class="nhsuk-table__cell-historic" role="cell"
+                    <!-- <td class="nhsuk-table__cell-historic" role="cell"
                       id="updateAttribute-table-summary-body-indicator-cell-1">
                       <span class="nhsuk-table-responsive__heading">Indicator </span>
                       <span id="updateAttribute-table--availability-restrictions-updateAttribute-tag-value-current-1">
 
 
 
-                     <span class="nhsuk-u-visually-hidden nhsuk-table__cell-historic">Previous</span>
-                        <strong class="nhsuk-tag nhsuk-tag--aqua-green"><abbr title="Previous">Previous</abbr>
+                        <span class="nhsuk-u-visually-hidden nhsuk-table__cell-historic">Historic</span>
+                        <strong class="nhsuk-tag nhsuk-tag--orange"><abbr title="Historic">H</abbr>
                         </strong>
 
 
@@ -172,7 +125,7 @@
 
 
                       </span>
-                    </td>
+                    </td> -->
 
                     <td class="nhsuk-table__cell" role="cell"
                       id="updateAttribute-table-summary-body-cell-attribute-name-1">
@@ -198,7 +151,7 @@
                     </td>
                   </tr>
 
-                  <tr class="nhsuk-table__row temporal-current temporal-current" role="row"
+                  <!-- <tr class="nhsuk-table__row temporal-current temporal-current" role="row"
                     id="updateAttribute-table-summary-body-row-2">
 
                     <td role="cell" class="nhsuk-table__cell" rowspan="2" style="vertical-align: middle;">
@@ -253,29 +206,24 @@
                       <span class="nhsuk-table-responsive__heading">End date</span>
                       <span id="updateAttribute-table--updateAttribute-end-date-2">01-02-3456</span>
                     </td>
-                  </tr>
+                  </tr> -->
 
-                  <tr class="nhsuk-table__row temporal-current temporal-historic" role="row"
+                  <tr class="nhsuk-table__row " role="row"
                     id="updateAttribute-table-summary-body-row-3">
 
-                    <td class="nhsuk-table__cell-historic" role="cell"
+                    <!-- <td class="nhsuk-table__cell-historic" role="cell"
                       id="updateAttribute-table-summary-body-indicator-cell-3">
                       <span class="nhsuk-table-responsive__heading">Indicator </span>
                       <span id="updateAttribute-table--licensing-authority-updateAttribute-tag-value-current-3">
 
 
 
-                        <span class="nhsuk-u-visually-hidden nhsuk-table__cell-historic">Previous</span>
-                        <strong class="nhsuk-tag nhsuk-tag--aqua-green"><abbr title="Previous">Previous</abbr>
+                        <span class="nhsuk-u-visually-hidden nhsuk-table__cell-historic">Historic</span>
+                        <strong class="nhsuk-tag nhsuk-tag--orange"><abbr title="Historic">H</abbr>
                         </strong>
 
-
-
-
-
-
                       </span>
-                    </td>
+                    </td> -->
 
                     <td class="nhsuk-table__cell" role="cell"
                       id="updateAttribute-table-summary-body-cell-attribute-name-3">
@@ -301,109 +249,7 @@
                     </td>
                   </tr>
 
-                  <tr class="nhsuk-table__row temporal-current temporal-current" role="row"
-                    id="updateAttribute-table-summary-body-row-4">
 
-                    <td role="cell" class="nhsuk-table__cell" rowspan="2" style="vertical-align: middle;">
-                      <span class="nhsuk-table-responsive__heading">Select</span>
-                      <div class="nhsuk-checkboxes">
-                        <div class="nhsuk-checkboxes__item">
-                          <input class="nhsuk-checkboxes__input" id="example-2" name="example" type="checkbox"
-                            value="phone">
-                          <label class="nhsuk-label nhsuk-checkboxes__label" for="example-2">
-
-                          </label>
-                        </div>
-                      </div>
-                    </td>
-
-                    <td class="nhsuk-table__cell-historic" role="cell"
-                      id="updateAttribute-table-summary-body-indicator-cell-4">
-                      <span class="nhsuk-table-responsive__heading">Indicator </span>
-                      <span
-                        id="updateAttribute-table--licensing-authority-change-reason-updateAttribute-tag-value-current-4">
-
-
-
-
-
-                        <span class="nhsuk-u-visually-hidden nhsuk-table__cell-historic">Current</span>
-
-
-
-
-                      </span>
-                    </td>
-
-                    <td class="nhsuk-table__cell" role="cell"
-                      id="updateAttribute-table-summary-body-cell-attribute-name-4">
-                      <span class="nhsuk-table-responsive__heading">Attribute name </span>
-                      <span id="updateAttribute-table--updateAttribute-description-4">Licensing Authority Change
-                        Reason</span>
-                    </td>
-                    <td class="nhsuk-table__cell" role="cell"
-                      id="updateAttribute-table-summary-body-cell-attribute-value-4">
-                      <span class="nhsuk-table-responsive__heading">Value </span>
-                      <span id="updateAttribute-table--updateAttribute-value-4">Reintroduced</span>
-                    </td>
-
-                    <td class="nhsuk-table__cell nhsuk-u--table-date-width"
-                      id="updateAttribute-table-summary-body-cell-attribute-start-date-4">
-                      <span class="nhsuk-table-responsive__heading">Start date</span>
-                      <span id="updateAttribute-table--updateAttribute-start-date-4">04-08-2025</span>
-                    </td>
-
-                    <td class="nhsuk-table__cell nhsuk-u--table-date-width"
-                      id="updateAttribute-table-summary-body-cell-attribute-end-date-4">
-                      <span class="nhsuk-table-responsive__heading">End date</span>
-                      <span id="updateAttribute-table--updateAttribute-end-date-4">01-02-3456</span>
-                    </td>
-                  </tr>
-                                    <tr class="nhsuk-table__row temporal-current temporal-historic" role="row"
-                    id="updateAttribute-table-summary-body-row-3">
-
-                    <td class="nhsuk-table__cell-historic" role="cell"
-                      id="updateAttribute-table-summary-body-indicator-cell-3">
-                      <span class="nhsuk-table-responsive__heading">Indicator </span>
-                      <span id="updateAttribute-table--licensing-authority-updateAttribute-tag-value-current-3">
-
-
-
-                        <span class="nhsuk-u-visually-hidden nhsuk-table__cell-historic">Previous</span>
-                        <strong class="nhsuk-tag nhsuk-tag--aqua-green"><abbr title="Previous">Previous</abbr>
-                        </strong>
-
-
-
-
-
-
-                      </span>
-                    </td>
-
-                    <td class="nhsuk-table__cell" role="cell"
-                      id="updateAttribute-table-summary-body-cell-attribute-name-3">
-                      <span class="nhsuk-table-responsive__heading">Attribute name </span>
-                      <span id="updateAttribute-table--updateAttribute-description-3">Licensing Authority Change Reason</span>
-                    </td>
-                    <td class="nhsuk-table__cell" role="cell"
-                      id="updateAttribute-table-summary-body-cell-attribute-value-3">
-                      <span class="nhsuk-table-responsive__heading">Value </span>
-                      <span id="updateAttribute-table--updateAttribute-value-3"> </span>
-                    </td>
-
-                    <td class="nhsuk-table__cell nhsuk-u--table-date-width"
-                      id="updateAttribute-table-summary-body-cell-attribute-start-date-3">
-                      <span class="nhsuk-table-responsive__heading">Start date</span>
-                      <span id="updateAttribute-table--updateAttribute-start-date-3"> </span>
-                    </td>
-
-                    <td class="nhsuk-table__cell nhsuk-u--table-date-width"
-                      id="updateAttribute-table-summary-body-cell-attribute-end-date-3">
-                      <span class="nhsuk-table-responsive__heading">End date</span>
-                      <span id="updateAttribute-table--updateAttribute-end-date-3"> </span>
-                    </td>
-                  </tr>
                 </tbody>
               </table>
             </div>
@@ -412,8 +258,7 @@
         </div>
       </div>
 
-      <a class="nhsuk-button nhsuk-u-margin-right-2" id="submit" href="/undo-changes/amp-warning">Undo selected
-        changes</button>
+      <a class="nhsuk-button nhsuk-u-margin-right-2" id="submit" href="/undo-changes/amp">Confirm and save </button>
 
       <a class="nhsuk-button nhsuk-button--secondary-solid nhsuk-u-margin-left-2" href="/undo-changes/amp" id="cancel"  >Cancel and go
         back</a>
