--- a/templates/undo-changes/amp.html
+++ b/templates/undo-changes/amp.html
@@ -3319,31 +3319,204 @@
           <a class="nhsuk-button " id="download-button" href="/path/to/audit/file">Download audit file
           </a>
 
-          <table class="nhsuk-table">
-            <caption class="nhsuk-table__caption">Recent changes</caption>
-            <thead class="nhsuk-table__head">
-              <tr>
-                 <th scope="col" class="nhsuk-table__header">Change initiator</th>
-                  <th scope="col" class="nhsuk-table__header">Change type</th>
-                <th scope="col" class="nhsuk-table__header">Date</th>
-                <th scope="col" class="nhsuk-table__header">Time</th>
-               
-                <th scope="col" class="nhsuk-table__header">Action</th>
-              </tr>
-            </thead>
-            <tbody class="nhsuk-table__body">
-              <tr class="nhsuk-table__row">
-                 <th scope="row" class="nhsuk-table__header">[cypher]</th>
-                 <td class="nhsuk-table__cell">Attribute</td>
-                 <td class="nhsuk-table__cell">31-07-2025</td>
-                  <td class="nhsuk-table__cell">03:24 PM</td>
-                <td class="nhsuk-table__cell"><a href="/undo-changes/amp-review">
-                    Review changes
-                  </a></td>
-              </tr>
+          <div class="nhsuk-grid-row">
+            <div class="nhsuk-grid-column-full">
+              <table class="nhsuk-table">
+                <caption class="nhsuk-table__caption">Change Log</caption>
+                <thead class="nhsuk-table__head">
+                  <tr>
+                    <th scope="col" class="nhsuk-table__header">Change initiator</th>
+                    <th scope="col" class="nhsuk-table__header">Change type</th>
+                    <th scope="col" class="nhsuk-table__header">Date</th>
+                    <th scope="col" class="nhsuk-table__header">Time</th>
 
-            </tbody>
-          </table>
+                    <th scope="col" class="nhsuk-table__header">Action</th>
+                  </tr>
+                </thead>
+                <tbody class="nhsuk-table__body">
+                  <tr class="nhsuk-table__row">
+                    <th scope="row" class="nhsuk-table__header">JLOCK</th> <!--This is the user's email cypher-->
+                    <td class="nhsuk-table__cell">Attribute</td>
+                    <td class="nhsuk-table__cell">04-08-2025</td>
+                    <td class="nhsuk-table__cell">03:24 PM</td>
+                    <td class="nhsuk-table__cell"><a href="/undo-changes/amp-review">
+                        Review changes
+                      </a></td>
+                  </tr>
+
+                  <tr class="nhsuk-table__row">
+                    <th scope="row" class="nhsuk-table__header">SYSTEM</th>
+                    <!--This represents changes executed by the system-->
+                    <td class="nhsuk-table__cell">VMP</td>
+                    <td class="nhsuk-table__cell">28-07-2025</td>
+                    <td class="nhsuk-table__cell">10:24 AM</td>
+                    <td class="nhsuk-table__cell"><a href="/undo-changes/amp-review-system">
+                        Review changes
+                      </a></td>
+                  </tr>
+
+                  <tr class="nhsuk-table__row">
+                    <th scope="row" class="nhsuk-table__header">HEKIR [undo]</th>
+                    <!--This represents an undo operation carried out by the person with this cypher-->
+                    <td class="nhsuk-table__cell">Name details</td>
+                    <td class="nhsuk-table__cell">28-07-2025</td>
+                    <td class="nhsuk-table__cell">10:16 AM</td>
+                    <td class="nhsuk-table__cell"><a href="/undo-changes/amp-review-undo">
+                        Review changes
+                      </a></td>
+                  </tr>
+
+                   
+
+                  <tr class="nhsuk-table__row">
+                    <th scope="row" class="nhsuk-table__header">JLOCK</th>
+                    
+                    <td class="nhsuk-table__cell">Supplier details</td>
+                    <td class="nhsuk-table__cell">21-07-2025</td>
+                    <td class="nhsuk-table__cell">10:16 AM</td>
+                    <td class="nhsuk-table__cell"><a href="/undo-changes/amp-review">
+                        Review changes
+                      </a></td>
+                  </tr>
+                  <tr class="nhsuk-table__row">
+                    <th scope="row" class="nhsuk-table__header">LORID</th>
+                  
+                    <td class="nhsuk-table__cell">Name details</td>
+                    <td class="nhsuk-table__cell">18-07-2025</td>
+                    <td class="nhsuk-table__cell">11:37 AM</td>
+                    <td class="nhsuk-table__cell"><a href="/undo-changes/amp-review">
+                        Review changes
+                      </a></td>
+                  </tr>
+                  <tr class="nhsuk-table__row">
+                    <th scope="row" class="nhsuk-table__header">HEKIR</th>
+                    
+                    <td class="nhsuk-table__cell">AMPP</td>
+                    <td class="nhsuk-table__cell">12-06-2025</td>
+                    <td class="nhsuk-table__cell">12:15 PM</td>
+                    <td class="nhsuk-table__cell"><a href="/undo-changes/amp-review">
+                        Review changes
+                      </a></td>
+                  </tr>
+
+                                    <tr class="nhsuk-table__row">
+                    <th scope="row" class="nhsuk-table__header">HEKIR [undo]</th>
+                    <td class="nhsuk-table__cell">Name details</td>
+                    <td class="nhsuk-table__cell">12-06-2025</td>
+                    <td class="nhsuk-table__cell">04:23 PM</td>
+                    <td class="nhsuk-table__cell"><a href="/undo-changes/amp-review">
+                        Review changes
+                      </a></td>
+                  </tr>
+                  <tr class="nhsuk-table__row">
+                    <th scope="row" class="nhsuk-table__header">SYSTEM</th>
+                    <td class="nhsuk-table__cell">VMP</td>
+                    <td class="nhsuk-table__cell">10-06-2025</td>
+                    <td class="nhsuk-table__cell">09:15 AM</td>
+                    <td class="nhsuk-table__cell"><a href="/undo-changes/amp-review">
+                        Review changes
+                      </a></td>
+                  </tr>
+                  <tr class="nhsuk-table__row">
+                    <th scope="row" class="nhsuk-table__header">JLOCK</th>
+                    <td class="nhsuk-table__cell">Attribute</td>
+                    <td class="nhsuk-table__cell">05-06-2025</td>
+                    <td class="nhsuk-table__cell">01:47 PM</td>
+                    <td class="nhsuk-table__cell"><a href="/undo-changes/amp-review">
+                        Review changes
+                      </a></td>
+                  </tr>
+                  <tr class="nhsuk-table__row">
+                    <th scope="row" class="nhsuk-table__header">HEKIR</th>
+                    <td class="nhsuk-table__cell">AMPP</td>
+                    <td class="nhsuk-table__cell">30-05-2025</td>
+                    <td class="nhsuk-table__cell">08:58 AM</td>
+                    <td class="nhsuk-table__cell"><a href="/undo-changes/amp-review">
+                        Review changes
+                      </a></td>
+                  </tr>
+                  <tr class="nhsuk-table__row">
+                    <th scope="row" class="nhsuk-table__header">LORID</th>
+                    <td class="nhsuk-table__cell">Name details</td>
+                    <td class="nhsuk-table__cell">25-05-2025</td>
+                    <td class="nhsuk-table__cell">03:02 PM</td>
+                    <td class="nhsuk-table__cell"><a href="/undo-changes/amp-review">
+                        Review changes
+                      </a></td>
+                  </tr>
+                  <tr class="nhsuk-table__row">
+                    <th scope="row" class="nhsuk-table__header">JLOCK</th>
+                    <td class="nhsuk-table__cell">Supplier details</td>
+                    <td class="nhsuk-table__cell">20-05-2025</td>
+                    <td class="nhsuk-table__cell">11:39 AM</td>
+                    <td class="nhsuk-table__cell"><a href="/undo-changes/amp-review">
+                        Review changes
+                      </a></td>
+                  </tr>
+                  <tr class="nhsuk-table__row">
+                    <th scope="row" class="nhsuk-table__header">HEKIR [undo]</th>
+                    <td class="nhsuk-table__cell">Name details</td>
+                    <td class="nhsuk-table__cell">15-05-2025</td>
+                    <td class="nhsuk-table__cell">04:55 PM</td>
+                    <td class="nhsuk-table__cell"><a href="/undo-changes/amp-review">
+                        Review changes
+                      </a></td>
+                  </tr>
+                  <tr class="nhsuk-table__row">
+                    <th scope="row" class="nhsuk-table__header">SYSTEM</th>
+                    <td class="nhsuk-table__cell">VMP</td>
+                    <td class="nhsuk-table__cell">10-05-2025</td>
+                    <td class="nhsuk-table__cell">10:20 AM</td>
+                    <td class="nhsuk-table__cell"><a href="/undo-changes/amp-review">
+                        Review changes
+                      </a></td>
+                  </tr>
+                  <tr class="nhsuk-table__row">
+                    <th scope="row" class="nhsuk-table__header">JLOCK</th>
+                    <td class="nhsuk-table__cell">Attribute</td>
+                    <td class="nhsuk-table__cell">02-05-2025</td>
+                    <td class="nhsuk-table__cell">02:34 PM</td>
+                    <td class="nhsuk-table__cell"><a href="/undo-changes/amp-review">
+                        Review changes
+                      </a></td>
+                  </tr>
+
+
+
+
+
+                </tbody>
+              </table>
+
+              <nav class="nhsuk-pagination" role="navigation" aria-label="Pagination">
+                <ul class="nhsuk-list nhsuk-pagination__list">
+                  <!-- <li class="nhsuk-pagination-item--previous">
+      <a class="nhsuk-pagination__link nhsuk-pagination__link--prev" href="#">
+        <span class="nhsuk-pagination__title">Previous</span>
+        <span class="nhsuk-u-visually-hidden">:</span>
+        <span class="nhsuk-pagination__page">Treatments</span>
+        <svg class="nhsuk-icon nhsuk-icon__arrow-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" width="34" height="34">
+          <path d="M4.1 12.3l2.7 3c.2.2.5.2.7 0 .1-.1.1-.2.1-.3v-2h11c.6 0 1-.4 1-1s-.4-1-1-1h-11V9c0-.2-.1-.4-.3-.5h-.2c-.1 0-.3.1-.4.2l-2.7 3c0 .2 0 .4.1.6z"></path>
+        </svg>
+      </a>
+    </li> -->
+                  <li class="nhsuk-pagination-item--next">
+                    <a class="nhsuk-pagination__link nhsuk-pagination__link--next" href="#">
+                      <span class="nhsuk-pagination__title">Next</span>
+                      <span class="nhsuk-u-visually-hidden">:</span>
+                      <span class="nhsuk-pagination__page">16 - 30</span>
+                      <svg class="nhsuk-icon nhsuk-icon__arrow-right" xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 24 24" aria-hidden="true" width="34" height="34">
+                        <path
+                          d="M19.6 11.66l-2.73-3A.51.51 0 0 0 16 9v2H5a1 1 0 0 0 0 2h11v2a.5.5 0 0 0 .32.46.39.39 0 0 0 .18 0 .52.52 0 0 0 .37-.16l2.73-3a.5.5 0 0 0 0-.64z">
+                        </path>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+          </div>
         </div>
       </div>
     </div>
