--- a/templates/undo-changes/index.html
+++ b/templates/undo-changes/index.html
@@ -1,216 +1,59 @@
 {% extends "undo-changes/base.html" %}
 {% block content %}
-<div class="nhsuk-width-container">
-  <div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-full">
-      <form id="new-search-form" method="post"><input type="hidden" name="_csrf"
-          value="mqQ58ifpWeY-Ar790t0aq2En70y_exc01JFzfzMc47XjUlk9rpIIl0OIa4UTNImYtPAuklcfwi2OS3YZ4KRCTQAt2tGFNGAL">
+<ul class="nhsuk-grid-row nhsuk-card-group">
+        <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
 
 
-
-
-        <h1 class="nhsuk-heading-xl nhsuk-u-margin-bottom-5 nhsuk-u-margin-left-3" id="page-landing-heading">Name
-          search</h1>
-
-
-
-        <div class="nhsuk-grid-column-one-quarter">
-          <div class="nhsuk-form-group">
-            <label class="nhsuk-label" for="search-type">
-              Search type
-            </label>
-
-            <select class="nhsuk-select search-type" id="search-type" name="searchType">
-              <option value="VMP">VMP</option>
-              <option value="AMP">AMP</option>
-              <option value="Supplier">Supplier</option>
-              <option value="VTM" selected="selected">VTM</option>
-              <option value="Ingredient">Ingredient</option>
-            </select>
-          </div>
-        </div>
-
-        <!-- Serch Input field-->
-        <div class="nhsuk-grid-column-three-quarters">
-          <div class="nhsuk-form-group autocomplete-wrapper nhsuk-u-width-full" id="autocomplete-results__form-group">
-            <label class="nhsuk-label" for="search-term">Search
-              term
-            </label>
-
-            <input class="nhsuk-input nhsuk-u-width-full" id="search-term" type="text" role="combobox"
-              aria-autocomplete="list" aria-describedby="search-field__assistiveHint"
-              aria-owns="autocomplete-results-container" aria-controls="autocomplete-results__announcer"
-              aria-expanded="false" name="searchTerm" value="" autocomplete="off">
-            <ul class="autocomplete__menu autocomplete__menu--inline autocomplete__menu--hidden"
-              id="autocomplete-results-container" role="listbox"></ul>
-            <div class="nhsuk-u-visually-hidden" id="autocomplete-results__announcer" role="alert"
-              aria-live="assertive"></div>
-            <span class="autocomplete__announcer" id="search-field__assistiveHint"> When
-              autocomplete results are available use up and down arrows to review and enter to
-              select.</span>
-          </div>
-        </div>
-
-        <div class="nhsuk-grid-column-full" id="row-supplier-input" style="display: none;">
-          <div class="nhsuk-form-group">
-            <label class="nhsuk-label" for="search-supplier-input">Supplier (optional)</label>
-            <input class="nhsuk-input" id="search-supplier-input" type="text" name="supplier" value="">
-          </div>
-        </div>
-
-        <div class="nhsuk-grid-column-full">
-          <details class="nhsuk-details">
-            <summary class="nhsuk-details__summary">
-              <span class="nhsuk-details__summary-text">Refine search</span>
-            </summary>
-            <div class="nhsuk-details__text">
-
-              <div class="nhsuk-form-group">
-                <fieldset class="nhsuk-fieldset">
-                  <legend class="nhsuk-fieldset__legend">Filter by</legend>
-                  <div class="nhsuk-checkboxes">
-
-                    <div class="nhsuk-grid-column-one-quarter nhsuk-u-padding-top-2">
-                      <div class="nhsuk-checkboxes__item">
-                        <input type="hidden" name="_showPCDD" value="on"><input class="nhsuk-checkboxes__input"
-                          id="checkbox-show-pcdd-items" type="checkbox" checked="checked" name="showPCDD" value="true">
-                        <label class="nhsuk-label nhsuk-checkboxes__label" for="checkbox-show-pcdd-items">
-                          PCDD
-                        </label>
-                      </div>
-                      <div class="nhsuk-checkboxes__item">
-                        <input type="hidden" name="_showSCDD" value="on"><input class="nhsuk-checkboxes__input"
-                          id="checkbox-show-scdd-items" type="checkbox" checked="checked" name="showSCDD" value="true">
-                        <label class="nhsuk-label nhsuk-checkboxes__label" for="checkbox-show-scdd-items">
-                          SCDD
-                        </label>
-                      </div>
-                    </div>
-
-                    <div class="nhsuk-grid-column-one-quarter nhsuk-u-padding-top-2">
-                      <div class="nhsuk-checkboxes__item">
-                        <input type="hidden" name="_showValidItems" value="on"><input class="nhsuk-checkboxes__input"
-                          id="checkbox-show-valid-items" type="checkbox" checked="checked" name="showValidItems"
-                          value="true">
-                        <label class="nhsuk-label nhsuk-checkboxes__label" for="checkbox-show-valid-items">
-                          Valid
-                        </label>
-                      </div>
-
-                      <div class="nhsuk-checkboxes__item">
-                        <input type="hidden" name="_showInvalidItems" value="on"><input class="nhsuk-checkboxes__input"
-                          id="checkbox-show-invalid-items" type="checkbox" checked="checked" name="showInvalidItems"
-                          value="true">
-                        <label class="nhsuk-label nhsuk-checkboxes__label" for="checkbox-show-invalid-items">
-                          Invalid
-                        </label>
-                      </div>
-                    </div>
-
-                    <div class="nhsuk-grid-column-one-quarter nhsuk-u-padding-top-2">
-                      <div class="nhsuk-checkboxes__item">
-                        <input type="hidden" name="_showAvailable" value="on"><input class="nhsuk-checkboxes__input"
-                          id="checkbox-show-avail-items" type="checkbox" checked="checked" name="showAvailable"
-                          value="true">
-                        <label class="nhsuk-label nhsuk-checkboxes__label" for="checkbox-show-avail-items">
-                          Available
-                        </label>
-                      </div>
-
-
-                      <div class="nhsuk-checkboxes__item">
-                        <input type="hidden" name="_showUnavailable" value="on"><input class="nhsuk-checkboxes__input"
-                          id="checkbox-show-unavail-items" type="checkbox" checked="checked" name="showUnavailable"
-                          value="true">
-                        <label class="nhsuk-label nhsuk-checkboxes__label" for="checkbox-show-unavail-items">
-                          Unavailable
-                        </label>
-                      </div>
-                    </div>
-
-                    <div class="nhsuk-grid-column-one-quarter nhsuk-u-padding-top-2">
-                      <div class="nhsuk-checkboxes__item">
-                        <input type="hidden" name="_matchTermsExact" value="on"><input class="nhsuk-checkboxes__input"
-                          id="checkbox-match-name-exact" type="checkbox" checked="checked" name="matchTermsExact"
-                          value="true">
-                        <label class="nhsuk-label nhsuk-checkboxes__label" for="checkbox-match-name-exact">
-                          Match terms
-                        </label>
-                      </div>
-
-                    </div>
-
-                  </div>
-                </fieldset>
-              </div>
+            <div class="nhsuk-card nhsuk-card--clickable">
+                <div class="nhsuk-card__content" style="display: block">
+                    <h2 class="nhsuk-card__heading nhsuk-heading-m"> <a class="nhsuk-card__link" href="/undo-changes/vmp">VMP</a> </h2>
+              
+                </div>
             </div>
-          </details>
-        </div>
 
-        <input type="hidden" value="100" id="size" name="size">
-        <div class="nhsuk-grid-column-one-quarter nhsuk-u-float-right" id="button-search">
+        </li>
+        <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
 
-          <button type="button" class="nhsuk-button" id="search-button">
-            Search
-          </button>
 
-          <button class="nhsuk-button nhsuk-button--secondary" id="reset-button" name="reset" type="submit">Reset
-          </button>
-        </div>
+            <div class="nhsuk-card nhsuk-card--clickable">
+                <div class="nhsuk-card__content" style="display: block">
+                    <h2 class="nhsuk-card__heading nhsuk-heading-m"> <a class="nhsuk-card__link" href="/undo-changes/amp">AMP </a> </h2>
+                    
+                </div>
+            </div>
 
-        <input type="hidden" value="1" id="page" name="page">
-        <!--Attributes from previous search for infinite scroll-->
-        <div class="nhsuk-u-visually-hidden">
-          <p id="searched-search-term"></p>
-          <p id="searched-search-type" var="VMP"></p>
-          <p id="searched-supplier"></p>
-          <p id="searched-show-PCDD" var="true"></p>
-          <p id="searched-show-SCDD" var="true"></p>
-          <p id="searched-show-valid" var="true"></p>
-          <p id="searched-show-invalid" var="true"></p>
-          <p id="searched-show-available" var="true"></p>
-          <p id="searched-show-unavailable" var="true"></p>
-          <p id="searched-match-term-exact" var="true"></p>
-        </div>
-      </form>
-    </div>
+        </li>
+        <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
 
-  </div>
-</div>
 
-<script>
-  document.getElementById("search-button").addEventListener("click", function () {
-    const searchType = document.getElementById("search-type").value;
-    const searchTerm = document.getElementById("search-term").value;
+            <div class="nhsuk-card nhsuk-card--clickable">
+                <div class="nhsuk-card__content" style="display: block">
+                    <h2 class="nhsuk-card__heading nhsuk-heading-m"> <a class="nhsuk-card__link" href="/update-redesign/vtm-update-current-name">VTM</a> </h2>
+                   
+                </div>
+            </div>
 
-    // Construct URL based on selected search type
-    let basePath = "/new-search/index"; // default
-    switch (searchType) {
-      case "VMP":
-        basePath = "/new-search/vmp-results";
-        break;
-      case "AMP":
-        basePath = "/new-search/amp-results";
-        break;
-      case "Supplier":
-        basePath = "/new-search/supplier-results";
-        break;
-      case "VTM":
-        basePath = "/new-search/vtm-results";
-        break;
-      case "Ingredient":
-        basePath = "/new-search/ingredient-results";
-        break;
-    }
+        </li> <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
 
- const params = new URLSearchParams({
-      searchTerm: searchTerm,
-      searchType: searchType
-    });
 
-    // Redirect
-    window.location.href = `${basePath}?${params.toString()}`;
-  });
-</script>
+            <div class="nhsuk-card nhsuk-card--clickable">
+                <div class="nhsuk-card__content" style="display: block">
+                    <h2 class="nhsuk-card__heading nhsuk-heading-m"> <a class="nhsuk-card__link" href="/update-redesign/ing-update-current-name">Ingredient</a> </h2>
+                    
+                </div>
+            </div>
+
+        </li> <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
+
+
+            <div class="nhsuk-card nhsuk-card--clickable">
+                <div class="nhsuk-card__content" style="display: block">
+                    <h2 class="nhsuk-card__heading nhsuk-heading-m"> <a class="nhsuk-card__link" href="/update-redesign/sup-update-current-name">Supplier</a> </h2>
+                   
+                </div>
+            </div>
+
+        </li>
+    </ul>
 
 {% endblock %}
